# chris-reigner.github.io

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
AI Agents Engineering/Resources/: index.html
AI Agents Engineering/introduction/: index.html
About the Author/: index.html
GenAI Engineering/Chapter 1 - Deep Learning/CPU vs GPU vs TPU/: index.html
GenAI Engineering/Chapter 1 - Deep Learning/Debugging Pytorch/: index.html
GenAI Engineering/Chapter 1 - Deep Learning/Deep Learning Optimization/: index.html
GenAI Engineering/Chapter 1 - Deep Learning/Deep Learning Overview/: index.html
GenAI Engineering/Chapter 1 - Deep Learning/Entropy/: index.html
GenAI Engineering/Chapter 2 - LLM Pipeline/: single_vs_multi_embedding.py
Introduction/: index.html
Resources/: index.html
docs/: About the Author.md  Introduction.md  Resources.md  index.md
docs/AI Agents Engineering/: Resources.md  agent-architecture-patterns.md  agent-hierarchy.md  evaluation-temporality.md  index.md  introduction.md  resources.md
docs/Financial Engineering/: resources.md
docs/cheatsheets/: docker.md
docs/img/: AI Agents Execution Diagram.html  vector_embeddings_diagram.html
scripts/: non_determinism.py  single_vs_multi_embedding.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/About the Author/: index.html
site/Introduction/: index.html
site/Resources/: index.html
site/search/: search_index.json
(+151 files in other folders)
