[project]
name = "ml-engineering-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.2.1",
    "datasets==3.2.0",
    "einops>=0.8.1",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.3",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.11",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.11",
    "peft==0.14.0",
    "poetry>=2.1.3",
    "pymdown-extensions>=10.14.3",
    "ruff>=0.11.5",
    "seaborn>=0.13.2",
    "transformers==4.47.1",
    "trl==0.14.0",
    "wandb==0.19.7",
]

[tool.ruff]
exclude = [".venv", "site", "notebooks"]